# covid

./: Makefile  README.md  pyproject.toml
data/: enhanced_sur_covid_19_eng.csv  latest_situation_of_reported_cases_covid_19_eng.csv
src/covid/: data.py  dist.py  model.py  plot.py  result.py  solve.py
tests/: test_conv.py
